# kill-it-qt

./: ..gitignore.un~  .CMakeLists.txt.un~  .Class.cs.un~  .KillIt.cs.un~  .Program.cs.un~  .gitignore  .gitignore~  Class.cs  Class.cs~  KillIt.cs  KillIt.cs~  Makefile  Program.cs  Program.cs~  README.md  kill-it-gtk.csproj  kill-it-gtk.csproj~  main  meson.build
.ccls-cache/@@home@ruzen42@src@kill-it/: @usr@include@bits@endian.h.blob  @usr@include@bits@endianness.h.blob  @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@time.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  @usr@include@bits@types@__locale_t.h.blob  @usr@include@bits@types@__mbstate_t.h.blob  @usr@include@bits@types@clock_t.h.blob  @usr@include@bits@types@clockid_t.h.blob  @usr@include@bits@types@locale_t.h.blob  @usr@include@bits@types@struct_FILE.h.blob  @usr@include@bits@types@struct_itimerspec.h.blob  @usr@include@bits@types@struct_timespec.h.blob  @usr@include@bits@types@struct_tm.h.blob  @usr@include@bits@types@time_t.h.blob  @usr@include@bits@types@timer_t.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@gtk-4.0@gdk@gdk.h.blob  @usr@include@gtk-4.0@gsk@gsk.h.blob  @usr@include@gtk-4.0@gtk@css@gtkcss.h.blob  @usr@include@gtk-4.0@gtk@gtk.h.blob  (+260 more)
kill-it-gtk.AppDir/: .DirIcon  AppRun  kill-it-gtk  kill-it-gtk.desktop
src/: main.c  main.cpp  parse_config.c  parse_config.cpp  parse_config.h
(+43 files in other folders)
